Add incremental update support for CSV generation
- Added parse_incremental() to parser.py for differential updates
- S02 now only processes new HTML files, skipping existing race_ids
- Significant performance improvement for daily updates

--- a/notebooks/sagemaker/S02_feature_engineering.ipynb
+++ b/notebooks/sagemaker/S02_feature_engineering.ipynb
@@ -8,8 +8,7 @@
                 "\n",
                 "このノートブックでは以下の処理を行います：\n",
                 "1. 全HTMLファイルをパースして中間ファイル（CSV）を生成\n",
-                "2. 特徴量の計算\n",
-                "3. 学習用データセットの作成\n",
+                "2. **差分更新**: 新規HTMLのみを処理して既存CSVに追加\n",
                 "\n",
                 "**実行環境**: Sagemaker"
             ]
@@ -49,9 +48,13 @@
                 "PROCESSED_DIR.mkdir(parents=True, exist_ok=True)\n",
                 "FEATURES_DIR.mkdir(parents=True, exist_ok=True)\n",
                 "\n",
+                "# ファイルパス\n",
+                "RACES_CSV = PROCESSED_DIR / 'races.csv'\n",
+                "RESULTS_CSV = PROCESSED_DIR / 'results.csv'\n",
+                "\n",
                 "print(f\"HTML_DIR: {HTML_DIR.resolve()}\")\n",
-                "print(f\"PROCESSED_DIR: {PROCESSED_DIR.resolve()}\")\n",
-                "print(f\"FEATURES_DIR: {FEATURES_DIR.resolve()}\")"
+                "print(f\"RACES_CSV: {RACES_CSV}\")\n",
+                "print(f\"RESULTS_CSV: {RESULTS_CSV}\")"
             ]
         },
         {
@@ -61,8 +64,7 @@
             "outputs": [],
             "source": [
                 "# モジュールインポート\n",
-                "from scraper.parser import parse_multiple_html_full, classify_race_level\n",
-                "from features.calculator import calculate_horse_features, build_feature_dataset\n",
+                "from scraper.parser import parse_incremental, parse_multiple_html_full, classify_race_level\n",
                 "\n",
                 "print(\"✅ モジュール読み込み完了\")"
             ]
@@ -72,11 +74,10 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 2. 中間ファイル生成\n",
+                "## 2. 差分更新（推奨）\n",
                 "\n",
-                "全HTMLをパースして以下のCSVを生成：\n",
-                "- `races.csv`: レース情報\n",
-                "- `results.csv`: 出走馬・レース結果"
+                "既存のCSVがある場合、新規HTMLのみを処理して追加します。\n",
+                "初回実行時は全HTMLを処理します。"
             ]
         },
         {
@@ -85,17 +86,17 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 既存の中間ファイルを確認\n",
-                "races_csv = PROCESSED_DIR / 'races.csv'\n",
-                "results_csv = PROCESSED_DIR / 'results.csv'\n",
-                "\n",
-                "if races_csv.exists() and results_csv.exists():\n",
-                "    print(f\"✅ 中間ファイルが既に存在します\")\n",
-                "    print(f\"   races.csv: {races_csv.stat().st_size / 1024 / 1024:.2f} MB\")\n",
-                "    print(f\"   results.csv: {results_csv.stat().st_size / 1024 / 1024:.2f} MB\")\n",
-                "    print(\"\\n再生成する場合は次のセルを実行してください\")\n",
+                "# 現在の状態を確認\n",
+                "if RACES_CSV.exists():\n",
+                "    existing_races = pd.read_csv(RACES_CSV)\n",
+                "    existing_results = pd.read_csv(RESULTS_CSV)\n",
+                "    print(f\"📊 既存データ:\")\n",
+                "    print(f\"   レース数: {len(existing_races):,}\")\n",
+                "    print(f\"   出走馬データ数: {len(existing_results):,}\")\n",
+                "    print(f\"   races.csv: {RACES_CSV.stat().st_size / 1024 / 1024:.2f} MB\")\n",
+                "    print(f\"   results.csv: {RESULTS_CSV.stat().st_size / 1024 / 1024:.2f} MB\")\n",
                 "else:\n",
-                "    print(\"中間ファイルが見つかりません。次のセルでHTMLをパースします。\")"
+                "    print(\"中間ファイルが見つかりません。初回作成を行います。\")"
             ]
         },
         {
@@ -104,42 +105,25 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# HTMLパース実行（初回または再生成時）\n",
-                "def progress_callback(processed, total):\n",
-                "    print(f\"\\r進捗: {processed}/{total} ({processed/total*100:.1f}%)\", end='')\n",
+                "# 差分更新実行\n",
+                "def progress_callback(processed, total, skipped=0):\n",
+                "    new_count = processed - skipped\n",
+                "    print(f\"\\r進捗: {processed}/{total} (スキップ: {skipped}, 新規: {new_count})\", end='')\n",
                 "\n",
-                "print(\"📊 HTMLパースを開始します...\")\n",
-                "print(f\"対象ディレクトリ: {HTML_DIR}\")\n",
+                "print(\"📥 差分更新を開始します...\")\n",
+                "print(f\"対象: {HTML_DIR}\")\n",
                 "\n",
-                "# 全年のHTMLをパース\n",
-                "race_list, horse_list = parse_multiple_html_full(\n",
+                "new_races, new_horses = parse_incremental(\n",
                 "    HTML_DIR,\n",
-                "    years=None,  # 全年\n",
+                "    RACES_CSV,\n",
+                "    RESULTS_CSV,\n",
+                "    years=None,  # 全年をチェック\n",
                 "    progress_callback=progress_callback\n",
                 ")\n",
                 "\n",
-                "print(f\"\\n\\n✅ パース完了\")\n",
-                "print(f\"   レース数: {len(race_list):,}\")\n",
-                "print(f\"   出走馬データ数: {len(horse_list):,}\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# DataFrameに変換して保存\n",
-                "races_df = pd.DataFrame(race_list)\n",
-                "results_df = pd.DataFrame(horse_list)\n",
-                "\n",
-                "# CSVに保存\n",
-                "races_df.to_csv(races_csv, index=False, encoding='utf-8')\n",
-                "results_df.to_csv(results_csv, index=False, encoding='utf-8')\n",
-                "\n",
-                "print(f\"✅ 中間ファイル保存完了\")\n",
-                "print(f\"   {races_csv}: {races_csv.stat().st_size / 1024 / 1024:.2f} MB\")\n",
-                "print(f\"   {results_csv}: {results_csv.stat().st_size / 1024 / 1024:.2f} MB\")"
+                "print(f\"\\n\\n✅ 差分更新完了\")\n",
+                "print(f\"   新規レース: {new_races:,}\")\n",
+                "print(f\"   新規出走馬データ: {new_horses:,}\")"
             ]
         },
         {
@@ -147,7 +131,9 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 3. データ確認"
+                "## 3. 全件再生成（必要な場合のみ）\n",
+                "\n",
+                "パーサーを更新した場合など、全HTMLを再パースしたい場合に実行"
             ]
         },
         {
@@ -156,41 +142,63 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 中間ファイル読み込み\n",
-                "races_df = pd.read_csv(races_csv)\n",
-                "results_df = pd.read_csv(results_csv)\n",
+                "# 全件再生成する場合はこのセルのコメントを外して実行\n",
+                "# 警告: 時間がかかります\n",
                 "\n",
-                "print(\"=== レースデータ ===\")\n",
-                "print(f\"件数: {len(races_df):,}\")\n",
-                "print(f\"\\nカラム:\")\n",
+                "# def progress_full(processed, total, skipped=0):\n",
+                "#     print(f\"\\r進捗: {processed}/{total} ({processed/total*100:.1f}%)\", end='')\n",
+                "\n",
+                "# print(\"⚠️ 全HTMLを再パースします...\")\n",
+                "\n",
+                "# # 既存ファイルを削除\n",
+                "# if RACES_CSV.exists():\n",
+                "#     RACES_CSV.unlink()\n",
+                "# if RESULTS_CSV.exists():\n",
+                "#     RESULTS_CSV.unlink()\n",
+                "\n",
+                "# # 全件パース\n",
+                "# race_list, horse_list = parse_multiple_html_full(\n",
+                "#     HTML_DIR,\n",
+                "#     years=None,\n",
+                "#     progress_callback=progress_full\n",
+                "# )\n",
+                "\n",
+                "# # 保存\n",
+                "# pd.DataFrame(race_list).to_csv(RACES_CSV, index=False, encoding='utf-8')\n",
+                "# pd.DataFrame(horse_list).to_csv(RESULTS_CSV, index=False, encoding='utf-8')\n",
+                "\n",
+                "# print(f\"\\n\\n✅ 全件再生成完了\")\n",
+                "# print(f\"   レース数: {len(race_list):,}\")\n",
+                "# print(f\"   出走馬データ数: {len(horse_list):,}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 4. データ確認"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# 最新状態を確認\n",
+                "races_df = pd.read_csv(RACES_CSV)\n",
+                "results_df = pd.read_csv(RESULTS_CSV)\n",
+                "\n",
+                "print(\"=== 最新データ統計 ===\")\n",
+                "print(f\"レース数: {len(races_df):,}\")\n",
+                "print(f\"出走馬データ数: {len(results_df):,}\")\n",
+                "\n",
+                "print(f\"\\n=== レースデータ カラム ({len(races_df.columns)}) ===\")\n",
                 "print(races_df.columns.tolist())\n",
                 "\n",
-                "print(\"\\n=== 出走馬データ ===\")\n",
-                "print(f\"件数: {len(results_df):,}\")\n",
-                "print(f\"\\nカラム:\")\n",
+                "print(f\"\\n=== 出走馬データ カラム ({len(results_df.columns)}) ===\")\n",
                 "print(results_df.columns.tolist())"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# レースデータのサンプル\n",
-                "print(\"=== レースデータ サンプル ===\")\n",
-                "races_df.head(3)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# 出走馬データのサンプル\n",
-                "print(\"=== 出走馬データ サンプル ===\")\n",
-                "results_df.head(5)"
             ]
         },
         {
@@ -225,12 +233,20 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# 欠損値確認\n",
-                "print(\"=== 出走馬データ 欠損値 ===\")\n",
-                "missing = results_df.isnull().sum()\n",
-                "missing_pct = (missing / len(results_df) * 100).round(2)\n",
-                "missing_df = pd.DataFrame({'欠損数': missing, '欠損率(%)': missing_pct})\n",
-                "print(missing_df[missing_df['欠損数'] > 0].sort_values('欠損率(%)', ascending=False).head(20))"
+                "# サンプルデータ\n",
+                "print(\"=== レースデータ サンプル ===\")\n",
+                "display(races_df.tail(5))"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# サンプルデータ\n",
+                "print(\"=== 出走馬データ サンプル ===\")\n",
+                "display(results_df.tail(5))"
             ]
         },
         {
@@ -238,7 +254,7 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 4. 抽出された項目一覧\n",
+                "## 5. 抽出項目一覧\n",
                 "\n",
                 "### レース情報 (races.csv)\n",
                 "\n",
@@ -307,20 +323,6 @@
                 "| distance | 距離 |\n",
                 "| surface | 芝/ダート |\n",
                 "| track_condition | 馬場状態 |"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "---\n",
-                "## 5. 次のステップ\n",
-                "\n",
-                "中間ファイルが生成されました。以降は `results.csv` を使って：\n",
-                "\n",
-                "1. **特徴量計算**: `calculate_horse_features()` で馬ごとの過去成績を集計\n",
-                "2. **モデル学習**: `S03_model_training.ipynb` で予測モデルを学習\n",
-                "3. **予測**: `L02_prediction.ipynb` でローカル予測"
             ]
         }
     ],
