Add limit_per_year parameter for development mode
- Parser now supports limit_per_year to limit files per year
- S02 updated with LIMIT_PER_YEAR = 100 for dev, None for production
- Speeds up iteration during development

--- a/notebooks/sagemaker/S02_feature_engineering.ipynb
+++ b/notebooks/sagemaker/S02_feature_engineering.ipynb
@@ -1,278 +1,247 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# S02: データ変換（HTML → Parquet）\n",
-    "\n",
-    "HTMLをパースしてParquet形式で保存し、GitHubにプッシュすることでオンラインから参照可能にする\n",
-    "\n",
-    "**実行環境**: Sagemaker"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## 1. 環境設定"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "# プロジェクトルート\n",
-    "PROJECT_ROOT = Path('../../')\n",
-    "sys.path.insert(0, str(PROJECT_ROOT / 'src'))\n",
-    "\n",
-    "# データパス\n",
-    "HTML_DIR = PROJECT_ROOT / 'data' / 'raceHTML'\n",
-    "PROCESSED_DIR = PROJECT_ROOT / 'data' / 'processed'\n",
-    "\n",
-    "# ディレクトリ作成\n",
-    "PROCESSED_DIR.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "# ファイルパス\n",
-    "RACES_PARQUET = PROCESSED_DIR / 'races.parquet'\n",
-    "RESULTS_PARQUET = PROCESSED_DIR / 'results.parquet'\n",
-    "\n",
-    "# GitHub RAW URL（プッシュ後にアクセス可能）\n",
-    "GITHUB_BASE = \"https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed\"\n",
-    "\n",
-    "print(f\"HTML_DIR: {HTML_DIR.resolve()}\")\n",
-    "print(f\"RACES_PARQUET: {RACES_PARQUET}\")\n",
-    "print(f\"RESULTS_PARQUET: {RESULTS_PARQUET}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# モジュールインポート\n",
-    "from scraper.parser import parse_multiple_html_full, classify_race_level\n",
-    "\n",
-    "print(\"✅ モジュール読み込み完了\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## 2. 全HTMLをパース → Parquet保存"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def progress_callback(processed, total, skipped=0):\n",
-    "    pct = processed / total * 100 if total > 0 else 0\n",
-    "    print(f\"\\r進捗: {processed:,}/{total:,} ({pct:.1f}%)\", end='')\n",
-    "\n",
-    "print(\"📊 HTMLパースを開始...\")\n",
-    "print(f\"対象: {HTML_DIR}\")\n",
-    "\n",
-    "race_list, horse_list = parse_multiple_html_full(\n",
-    "    HTML_DIR,\n",
-    "    years=None,\n",
-    "    progress_callback=progress_callback\n",
-    ")\n",
-    "\n",
-    "print(f\"\\n\\n✅ パース完了\")\n",
-    "print(f\"   レース数: {len(race_list):,}\")\n",
-    "print(f\"   出走馬データ数: {len(horse_list):,}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DataFrameに変換\n",
-    "races_df = pd.DataFrame(race_list)\n",
-    "results_df = pd.DataFrame(horse_list)\n",
-    "\n",
-    "print(f\"races_df: {races_df.shape}\")\n",
-    "print(f\"results_df: {results_df.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parquet形式で保存\n",
-    "races_df.to_parquet(RACES_PARQUET, index=False, compression='snappy')\n",
-    "results_df.to_parquet(RESULTS_PARQUET, index=False, compression='snappy')\n",
-    "\n",
-    "print(\"✅ Parquet保存完了\")\n",
-    "print(f\"   races.parquet: {RACES_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")\n",
-    "print(f\"   results.parquet: {RESULTS_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## 3. データ確認"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 統計\n",
-    "print(\"=== データ統計 ===\")\n",
-    "print(f\"レース数: {len(races_df):,}\")\n",
-    "print(f\"出走馬データ数: {len(results_df):,}\")\n",
-    "\n",
-    "if 'year' in races_df.columns:\n",
-    "    print(\"\\n=== 年別レース数 ===\")\n",
-    "    print(races_df.groupby('year').size().to_string())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# レースレベル分布\n",
-    "if 'race_level' in races_df.columns:\n",
-    "    print(\"=== レースレベル分布 ===\")\n",
-    "    print(races_df['race_level'].value_counts().sort_index().to_string())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# サンプル表示\n",
-    "print(\"=== レースデータ サンプル ===\")\n",
-    "display(races_df.tail(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"=== 出走馬データ サンプル ===\")\n",
-    "display(results_df.tail(5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## 4. GitHubにプッシュ\n",
-    "\n",
-    "Parquetファイル生成後、以下のコマンドでプッシュ:\n",
-    "\n",
-    "```bash\n",
-    "git add data/processed/*.parquet\n",
-    "git commit -m \"Update race data parquet files\"\n",
-    "git push\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Gitコマンド実行（オプション）\n",
-    "import subprocess\n",
-    "\n",
-    "os.chdir(PROJECT_ROOT)\n",
-    "\n",
-    "# Parquetファイルを追加・コミット・プッシュ\n",
-    "# subprocess.run(['git', 'add', 'data/processed/*.parquet'], check=True)\n",
-    "# subprocess.run(['git', 'commit', '-m', 'Update race data parquet files'], check=True)\n",
-    "# subprocess.run(['git', 'push'], check=True)\n",
-    "\n",
-    "print(\"⚠️ 手動でgit pushしてください（上のコマンドのコメントを外して実行も可能）\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## 5. オンラインからの読み込み方法\n",
-    "\n",
-    "GitHubにプッシュ後、以下のコードで読み込み可能:\n",
-    "\n",
-    "```python\n",
-    "import pandas as pd\n",
-    "\n",
-    "# GitHub RAW URLから直接読み込み\n",
-    "GITHUB_BASE = \"https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed\"\n",
-    "\n",
-    "races_df = pd.read_parquet(f\"{GITHUB_BASE}/races.parquet\")\n",
-    "results_df = pd.read_parquet(f\"{GITHUB_BASE}/results.parquet\")\n",
-    "\n",
-    "# 特定の馬を検索\n",
-    "horse_id = \"2022110077\"\n",
-    "horse_results = results_df[results_df['horse_id'] == horse_id]\n",
-    "print(horse_results)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 特定の馬を検索するサンプル\n",
-    "horse_id = \"2022110077\"  # イリフィ\n",
-    "horse_results = results_df[results_df['horse_id'] == horse_id]\n",
-    "\n",
-    "print(f\"=== 馬ID: {horse_id} の成績 ===\")\n",
-    "print(f\"出走回数: {len(horse_results)}\")\n",
-    "display(horse_results[['race_date', 'venue_name', 'distance', 'surface', 'finish_position', 'popularity', 'odds', 'prize_money']])"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# S02: データ変換（HTML → Parquet）\n",
+                "\n",
+                "HTMLをパースしてParquet形式で保存\n",
+                "\n",
+                "**実行環境**: Sagemaker"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 1. 環境設定"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import sys\n",
+                "import os\n",
+                "from pathlib import Path\n",
+                "import pandas as pd\n",
+                "import numpy as np\n",
+                "import warnings\n",
+                "warnings.filterwarnings('ignore')\n",
+                "\n",
+                "# プロジェクトルート\n",
+                "PROJECT_ROOT = Path('../../')\n",
+                "sys.path.insert(0, str(PROJECT_ROOT / 'src'))\n",
+                "\n",
+                "# データパス\n",
+                "HTML_DIR = PROJECT_ROOT / 'data' / 'raceHTML'\n",
+                "PROCESSED_DIR = PROJECT_ROOT / 'data' / 'processed'\n",
+                "PROCESSED_DIR.mkdir(parents=True, exist_ok=True)\n",
+                "\n",
+                "# ファイルパス\n",
+                "RACES_PARQUET = PROCESSED_DIR / 'races.parquet'\n",
+                "RESULTS_PARQUET = PROCESSED_DIR / 'results.parquet'\n",
+                "\n",
+                "print(f\"HTML_DIR: {HTML_DIR.resolve()}\")\n",
+                "print(f\"出力先: {PROCESSED_DIR.resolve()}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from scraper.parser import parse_multiple_html_full\n",
+                "print(\"✅ モジュール読み込み完了\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 2. パース設定\n",
+                "\n",
+                "**開発中**: 各年100件ずつで確認  \n",
+                "**本番**: `LIMIT_PER_YEAR = None` で全件処理"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# ========== 設定 ==========\n",
+                "\n",
+                "# 開発モード: 各年100件に制限\n",
+                "LIMIT_PER_YEAR = 100\n",
+                "\n",
+                "# 本番モード: 全件処理（下のコメントを外す）\n",
+                "# LIMIT_PER_YEAR = None\n",
+                "\n",
+                "print(f\"処理モード: {'開発（各年{LIMIT_PER_YEAR}件）' if LIMIT_PER_YEAR else '本番（全件）'}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 3. HTMLパース実行"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def progress_callback(processed, total, skipped=0):\n",
+                "    pct = processed / total * 100 if total > 0 else 0\n",
+                "    print(f\"\\r進捗: {processed:,}/{total:,} ({pct:.1f}%)\", end='')\n",
+                "\n",
+                "print(\"📊 HTMLパースを開始...\")\n",
+                "if LIMIT_PER_YEAR:\n",
+                "    print(f\"   ⚠️ 開発モード: 各年 {LIMIT_PER_YEAR} 件まで\")\n",
+                "\n",
+                "race_list, horse_list = parse_multiple_html_full(\n",
+                "    HTML_DIR,\n",
+                "    years=None,\n",
+                "    progress_callback=progress_callback,\n",
+                "    limit_per_year=LIMIT_PER_YEAR\n",
+                ")\n",
+                "\n",
+                "print(f\"\\n\\n✅ パース完了\")\n",
+                "print(f\"   レース数: {len(race_list):,}\")\n",
+                "print(f\"   出走馬データ数: {len(horse_list):,}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# DataFrameに変換\n",
+                "races_df = pd.DataFrame(race_list)\n",
+                "results_df = pd.DataFrame(horse_list)\n",
+                "\n",
+                "print(f\"races_df: {races_df.shape}\")\n",
+                "print(f\"results_df: {results_df.shape}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Parquet形式で保存\n",
+                "races_df.to_parquet(RACES_PARQUET, index=False, compression='snappy')\n",
+                "results_df.to_parquet(RESULTS_PARQUET, index=False, compression='snappy')\n",
+                "\n",
+                "print(\"✅ Parquet保存完了\")\n",
+                "print(f\"   races.parquet: {RACES_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")\n",
+                "print(f\"   results.parquet: {RESULTS_PARQUET.stat().st_size / 1024 / 1024:.2f} MB\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 4. データ確認"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "print(\"=== データ統計 ===\")\n",
+                "print(f\"レース数: {len(races_df):,}\")\n",
+                "print(f\"出走馬データ数: {len(results_df):,}\")\n",
+                "\n",
+                "if 'year' in races_df.columns:\n",
+                "    print(\"\\n=== 年別レース数 ===\")\n",
+                "    print(races_df.groupby('year').size().to_string())"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# サンプル表示\n",
+                "print(\"=== レースデータ サンプル ===\")\n",
+                "display(races_df.tail(5))"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "print(\"=== 出走馬データ サンプル ===\")\n",
+                "display(results_df.tail(5))"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 5. GitHubにプッシュ\n",
+                "\n",
+                "```bash\n",
+                "git add data/processed/*.parquet\n",
+                "git commit -m \"Update race data parquet files\"\n",
+                "git push\n",
+                "```"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 6. オンラインからの読み込み\n",
+                "\n",
+                "```python\n",
+                "import pandas as pd\n",
+                "\n",
+                "# GitHub RAW URLから読み込み\n",
+                "BASE = \"https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed\"\n",
+                "\n",
+                "races_df = pd.read_parquet(f\"{BASE}/races.parquet\")\n",
+                "results_df = pd.read_parquet(f\"{BASE}/results.parquet\")\n",
+                "\n",
+                "# 特定の馬を検索\n",
+                "horse_results = results_df[results_df['horse_id'] == \"2022110077\"]\n",
+                "```"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "Python 3",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "name": "python",
+            "version": "3.11.2"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 4
 }
