Add auto git push cell to S02 notebook

--- a/notebooks/sagemaker/S02_feature_engineering.ipynb
+++ b/notebooks/sagemaker/S02_feature_engineering.ipynb
@@ -6,7 +6,7 @@
             "source": [
                 "# S02: データ変換（HTML → Parquet）\n",
                 "\n",
-                "HTMLをパースしてParquet形式で保存\n",
+                "HTMLをパースしてParquet形式で保存・GitHubにプッシュ\n",
                 "\n",
                 "**実行環境**: Sagemaker"
             ]
@@ -25,11 +25,19 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "!pip install pyarrow -q"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "import sys\n",
                 "import os\n",
                 "from pathlib import Path\n",
                 "import pandas as pd\n",
-                "import numpy as np\n",
                 "import warnings\n",
                 "warnings.filterwarnings('ignore')\n",
                 "\n",
@@ -42,7 +50,6 @@
                 "PROCESSED_DIR = PROJECT_ROOT / 'data' / 'processed'\n",
                 "PROCESSED_DIR.mkdir(parents=True, exist_ok=True)\n",
                 "\n",
-                "# ファイルパス\n",
                 "RACES_PARQUET = PROCESSED_DIR / 'races.parquet'\n",
                 "RESULTS_PARQUET = PROCESSED_DIR / 'results.parquet'\n",
                 "\n",
@@ -82,10 +89,10 @@
                 "# 開発モード: 各年100件に制限\n",
                 "LIMIT_PER_YEAR = 100\n",
                 "\n",
-                "# 本番モード: 全件処理（下のコメントを外す）\n",
+                "# 本番モード: 全件処理\n",
                 "# LIMIT_PER_YEAR = None\n",
                 "\n",
-                "print(f\"処理モード: {'開発（各年{LIMIT_PER_YEAR}件）' if LIMIT_PER_YEAR else '本番（全件）'}\")"
+                "print(f\"処理モード: {'開発（各年' + str(LIMIT_PER_YEAR) + '件）' if LIMIT_PER_YEAR else '本番（全件）'}\")"
             ]
         },
         {
@@ -180,7 +187,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# サンプル表示\n",
                 "print(\"=== レースデータ サンプル ===\")\n",
                 "display(races_df.tail(5))"
             ]
@@ -202,11 +208,51 @@
                 "---\n",
                 "## 5. GitHubにプッシュ\n",
                 "\n",
-                "```bash\n",
-                "git add data/processed/*.parquet\n",
-                "git commit -m \"Update race data parquet files\"\n",
-                "git push\n",
-                "```"
+                "Parquetファイルをコミット・プッシュしてオンラインからアクセス可能にする"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import subprocess\n",
+                "import os\n",
+                "\n",
+                "os.chdir(PROJECT_ROOT)\n",
+                "\n",
+                "# Git操作\n",
+                "print(\"📤 GitHubにプッシュ中...\")\n",
+                "\n",
+                "try:\n",
+                "    # Parquetファイルを追加\n",
+                "    subprocess.run(['git', 'add', 'data/processed/races.parquet', 'data/processed/results.parquet'], check=True)\n",
+                "    \n",
+                "    # コミット\n",
+                "    result = subprocess.run(\n",
+                "        ['git', 'commit', '-m', 'Update race data parquet files'],\n",
+                "        capture_output=True, text=True\n",
+                "    )\n",
+                "    if result.returncode == 0:\n",
+                "        print(\"✅ コミット完了\")\n",
+                "    elif 'nothing to commit' in result.stdout or 'nothing to commit' in result.stderr:\n",
+                "        print(\"ℹ️ 変更なし（コミット不要）\")\n",
+                "    else:\n",
+                "        print(f\"コミット結果: {result.stderr}\")\n",
+                "    \n",
+                "    # プッシュ\n",
+                "    result = subprocess.run(['git', 'push'], capture_output=True, text=True)\n",
+                "    if result.returncode == 0:\n",
+                "        print(\"✅ プッシュ完了!\")\n",
+                "        print(\"\\n🌐 オンラインからアクセス可能:\")\n",
+                "        print(\"   https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed/races.parquet\")\n",
+                "        print(\"   https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed/results.parquet\")\n",
+                "    else:\n",
+                "        print(f\"プッシュ結果: {result.stderr}\")\n",
+                "        \n",
+                "except Exception as e:\n",
+                "    print(f\"❌ エラー: {e}\")"
             ]
         },
         {
@@ -214,19 +260,14 @@
             "metadata": {},
             "source": [
                 "---\n",
-                "## 6. オンラインからの読み込み\n",
+                "## 6. オンラインからの読み込み確認\n",
                 "\n",
                 "```python\n",
                 "import pandas as pd\n",
                 "\n",
-                "# GitHub RAW URLから読み込み\n",
                 "BASE = \"https://raw.githubusercontent.com/iinumac/keiba_prediction/main/data/processed\"\n",
-                "\n",
                 "races_df = pd.read_parquet(f\"{BASE}/races.parquet\")\n",
                 "results_df = pd.read_parquet(f\"{BASE}/results.parquet\")\n",
-                "\n",
-                "# 特定の馬を検索\n",
-                "horse_results = results_df[results_df['horse_id'] == \"2022110077\"]\n",
                 "```"
             ]
         }
